--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">新型冠狀病毒 Covid-19</span>
+                <span class="d-block d-lg-none">新型冠狀病毒 Coronavirous</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" style="width: 400px;height: 400px;" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -45,11 +45,10 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         新型冠狀病毒
-                        <span class="text-primary">Coronavirous</span>
+                        <span class="text-primary">COVID－19</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        COVID-19的由來:由代表冠狀（corona）的CO、代表病毒（virus）的VI和代表疾病（disease）的D組成，19則代表2019年。
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
