--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於新冠病毒</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -48,7 +48,7 @@
                         <span class="text-primary">COVID－19</span>
                     </h1>
                     <div class="subheading mb-5">
-                        COVID-19的由來:由代表冠狀（corona）的CO、代表病毒（virus）的VI和代表疾病（disease）的D組成，19則代表2019年。
+                        COVID-19的由來：由代表冠狀（corona）的CO、代表病毒（virus）的VI和代表疾病（disease）的D組成，19則代表2019年。
                     </div>
                     <p class="lead mb-5">2019年12月，中國武漢出現首例感染，2020年1月，新型冠狀病毒開始在中國境內蔓延，並陸續在亞洲各國出現感染者，同月，武漢實施封城，疫情於2月在義大利等歐洲各國爆發，各國陸續開始宣布封城、封鎖邊境等等措施，3月美國等美洲國家開始爆發疫情，WHO宣布COVID-19是「全球大流行疾病」（Pandemic），疫情於全球大蔓延，到目前為止（2020/6/21）全球已有將近900萬人感染且46萬人死亡。</p>
                     <div class="social-icons">
