--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
                     </div>
                     <p class="lead mb-5">2019年12月，中國武漢出現首例感染，2020年1月，新型冠狀病毒開始在中國境內蔓延，並陸續在亞洲各國出現感染者，同月，武漢實施封城，疫情於2月在義大利等歐洲各國爆發，各國陸續開始宣布封城、封鎖邊境等等措施，3月美國等美洲國家開始爆發疫情，WHO宣布COVID-19是「全球大流行疾病」（Pandemic），疫情於全球大蔓延，到目前為止（2020/6/21）全球已有將近900萬人感染且46萬人死亡。</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href=#https://www.cdc.gov.tw/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </section>
