--- a/index.html
+++ b/index.html
@@ -57,44 +57,34 @@
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Experience-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
-                </div>
-            </section>
+           <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">
+		<span class="text-primary">各國爆發時間軸</span></h2>
+	<div class="timeline">
+		<div class="timeline-block timeline-left">
+			<div class="timeline-content">
+				<h3>Sept. 2019 ~ present</h3>
+				<p><img class="img-fluid img-profile mx-auto mb-2" src="SHU.png" style="width: 55px;height: 40px;"><span class="text-primary">世新大學學士</span>資訊傳播學系</p>
+			</div>
+		</div>
+		<div class="timeline-block timeline-right">
+			<div class="timeline-content">
+				<h3>Sept. 2016 ~ Jun. 2019</h3>
+				<p><img class="img-fluid img-profile mx-auto mb-2" src="TSSH.png" style="width: 40px;height: 40px;"><span class="text-primary">國立東石高中</span>普通科</p>
+			</div>
+		</div>
+		<div class="timeline-block timeline-left">
+			<div class="timeline-content">
+				<h3>Sept. 2013~ Jun. 2016</h3>
+				<p><img class="img-fluid img-profile mx-auto mb-2" src="東中.jpg" style="width: 40px;height: 40px;"><span class="text-primary">嘉義縣立東石國中</span>樂旗隊班</p>
+			</div>
+		</div>
+	</div>
+      </div>
+    </section>
             <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="education">
