--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
 				<p><span class="text-primary">巴西</span>累計確診數超過100萬人，為美國之後第二個破百萬確診的國家</p>
 			</div>
 		</div>
-		<div class="timeline-block timeline-right">
+		<div class="timeline-block timeline-left">
 			<div class="timeline-content">
-				<h3>2020/6/19</h3>
+				<h3>2020/6/21</h3>
 				<p><span class="text-primary">全球</span>累計超過890萬人確診，46萬人死亡</p>
 			</div>
 		</div>
