--- a/index.html
+++ b/index.html
@@ -301,14 +301,44 @@
 			<div class="timeline">
 				<div class="timeline-block timeline-left">
 					<div class="timeline-content">
-						<h3>2019/12/31</h3>
-						<p><span class="text-primary">中國</span>向WHO通報武漢出現27起原因不明的肺炎病例</p>
+						<h3>2019/01/21</h3>
+						<p><span class="text-primary"></span>因有境內確診病例出現，台灣將防疫指揮中心由三級提高到二級</p>
 					</div>
 				</div>
 				<div class="timeline-block timeline-right">
 					<div class="timeline-content">
-						<h3>2020/1/16</h3>
-						<p><span class="text-primary">日本</span>出現首例確診病例</p>
+						<h3>2020/01/24</h3>
+						<p><span class="text-primary"></span>衛福部宣布放寬通報定義，放寬後只要發燒「或」急性呼吸道感染，加上武漢旅遊史，就符合通報定義，此外，針對14天內去過武漢者也開始進行「鄰里健康關懷」</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/01/28</h3>
+						<p><span class="text-primary"></span>台灣針對中國（不含港澳）旅遊疫情警示提升到第三級，並針對居家隔離「與確診者密切接觸者」、居家檢疫「沒有症狀、具湖北旅遊史者」，兩類民眾，啟動手機電子監控</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/01/29</h3>
+						<p><span class="text-primary"></span>中央流行疫情指揮中心宣布，連3日每天釋出600萬片口罩至4大超商，每人限購3片</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/01/30</h3>
+						<p><span class="text-primary"></span>指揮中心宣布全面徵用國內生產醫療用口罩，作為調配第一線醫療、警政人員使用</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/01/31</h3>
+						<p><span class="text-primary"></span>中央流行疫情指揮中心宣布放寬通報定義，原先是有湖北接觸史，出現發燒「及」呼吸道症狀，放寬為只要有湖北接觸史，有發燒「或」呼吸道症狀者即通報</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/01/30</h3>
+						<p><span class="text-primary"></span>指揮中心宣布全面徵用國內生產醫療用口罩，作為調配第一線醫療、警政人員使用</p>
 					</div>
 				</div>
 			</div>
