--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         新型冠狀病毒
-                        <span class="text-primary">COVID－19  老師不好意思,我一開始做的網頁不小心被我自己刪除了,所以還在重做,加上我這幾天真的有點忙所以還沒做完,現在也還在上班中,等12點下班之後我會把還沒做完的補上,明天再讓您檢察,不好意思</span>
+                        <span class="text-primary">COVID－19</span>
                     </h1>
                     <div class="subheading mb-5">
                         COVID-19的由來：由代表冠狀（corona）的CO、代表病毒（virus）的VI和代表疾病（disease）的D組成，19則代表2019年。
