--- a/index.html
+++ b/index.html
@@ -337,8 +337,158 @@
 				</div>
 				<div class="timeline-block timeline-left">
 					<div class="timeline-content">
-						<h3>2019/01/30</h3>
-						<p><span class="text-primary"></span>指揮中心宣布全面徵用國內生產醫療用口罩，作為調配第一線醫療、警政人員使用</p>
+						<h3>2019/02/02</h3>
+						<p><span class="text-primary"></span>台灣首次因為疫情延後開學，全國高中職以下將延後開學2週，勞動部首度宣布，家中有12歲以下的兒童，家長可請「防疫照顧假」</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/02/03</h3>
+						<p><span class="text-primary"></span>台灣教育部宣布，大專院校開學時間延至2月25日之後；首波滯留武漢的台商搭乘中國東方航空包機反台</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/02/04</h3>
+						<p><span class="text-primary"></span>外交部宣布邊境管理政策，2月7日開始，過去14日內曾入境或居住於中國（不含港澳）的一般外籍人士，禁止入境台灣</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/02/05</h3>
+						<p><span class="text-primary"></span>台灣擴大邊境管制，宣布於6日起，將全中國（含港澳）列入二級流行地區，居住中國各省市陸人暫緩入境</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/02/06</h3>
+						<p><span class="text-primary"></span>開始實施「口罩販售實名制」</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/02/08</h3>
+						<p><span class="text-primary"></span>陸委會宣布，2月10日起，全面暫停兩岸海運客運直航航線及航班，視疫情狀況再評估復航</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/02/20</h3>
+						<p><span class="text-primary"></span>教育部宣布COVID-19停課標準，比腸病毒更加嚴格</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/02/21</h3>
+						<p><span class="text-primary"></span>台灣接回鑽石公主號旅客的華航包機於晚間9點48分降落桃園國際機場，共接回20人</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/02/25</h3>
+						<p><span class="text-primary"></span>《嚴重特殊傳染性肺炎防治及紓困振興特別條例》三讀通過</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/02/27</h3>
+						<p><span class="text-primary"></span>中央流行疫情指揮中心從二級開設提升到一級開設</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/03/01</h3>
+						<p><span class="text-primary"></span>中央地方居家檢疫隔離服務計畫今上路</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/03/05</h3>
+						<p><span class="text-primary"></span>成人從7天2片增加為3片，兒童口罩從7天4片增為5片，購買人數不變</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/03/09</h3>
+						<p><span class="text-primary"></span>指揮中心宣布將推出口罩2.0新措施，採網路預購、超商取貨</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/03/10</h3>
+						<p><span class="text-primary"></span>第二批接返滯留湖北台人包機於10日晚間至11日凌晨先後由華航、東航共同執飛</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/03/12</h3>
+						<p><span class="text-primary"></span>口罩實名制2.0正式上線</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/03/19</h3>
+						<p><span class="text-primary"></span>邊境管制再升級：1.非本國籍人士一律限制入境，除持有居留證、外交公務證明等特別許可的外籍人士不在此限2.所有自國外返台入境者都須居家檢疫14天</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/03/20</h3>
+						<p><span class="text-primary"></span>指揮中心宣布從21日零時起全球旅遊警示都提升到第三級，自國外入境者皆需14天居家檢疫</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/03/24</h3>
+						<p><span class="text-primary"></span>防疫補償金開放申請</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/04/01</h3>
+						<p><span class="text-primary"></span>交通部觀光局提出「安心防疫旅館」專案，每房每日補助業者1000元</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/04/02</h3>
+						<p><span class="text-primary"></span>行政院通過第二階段紓困方案，追加1,500億，總計規模達1兆500億元</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/04/03</h3>
+						<p><span class="text-primary"></span>指揮中心宣布，搭乘大眾運輸工具將要求乘客戴口罩，若沒有戴口罩會先予以勸導，勸導不聽者，將根據《傳染病防治條例》罰款</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/04/09</h3>
+						<p><span class="text-primary"></span>口罩實名制升級，領取口罩週期改為2週，兒童14天可領10片，大人14天領9片，不再分身分證號碼單雙號，每天都可以購買</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/04/21</h3>
+						<p><span class="text-primary"></span>紓困與振興預算追加1,500億，來到2,100億</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/04/22</h3>
+						<p><span class="text-primary"></span>口罩實名制3.0上路，可直接帶健保卡至超商預購繳費，手機、電腦網路預購也可立即繳費</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-left">
+					<div class="timeline-content">
+						<h3>2019/05/04</h3>
+						<p><span class="text-primary"></span>行政院宣布擴大急難紓困方案</p>
+					</div>
+				</div>
+				<div class="timeline-block timeline-right">
+					<div class="timeline-content">
+						<h3>2020/05/08</h3>
+						<p><span class="text-primary"></span>台灣逐步放寬防疫措施，如中職開放1000名觀眾進場</p>
 					</div>
 				</div>
 			</div>
