--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於新冠病毒</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">各地疫情時間軸</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">臺灣防疫措施</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">新冠病毒症狀</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
