--- a/index.html
+++ b/index.html
@@ -517,13 +517,14 @@
 				</tr>
 				<tr>
 					<td>一般上呼吸道感染症狀</td>
-					<td肺炎或呼吸衰竭等</td>
+					<td>肺炎或呼吸衰竭等</td>
 				</tr>
 			</thead>
 		</table>
 	</div>
+	      <img class="img-fluid img-profile mx-auto mb-2" src="症狀.png" style="width: 500px;height: 500px;">
       <div>
-    </div></div></section>
+    </section>
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
