--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@
 			</thead>
 		</table>
 	</div>
-	      <img class="img-fluid img-profile mx-auto mb-2" src="症狀.png" style="width: 500px;height: 500px;">
-      <div>
+	      <div><img class="img-fluid img-profile mx-auto mb-2" src="症狀.png" style="width: 500px;height: 500px;"></div>
+      </div>
     </section>
             <!-- Awards-->
             <section class="resume-section" id="awards">
