--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">各地疫情時間軸</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">臺灣防疫措施</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">新冠病毒症狀</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests"></a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards"></a></li>
                 </ul>
             </div>
         </nav>
@@ -56,7 +56,7 @@
             <hr class="m-0" />
 
             <!-- Experience-->
-           <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+           <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">
 		<span class="text-primary">各地疫情時間軸</span></h2>
@@ -496,7 +496,7 @@
 	</section>
             <hr class="m-0" />
             <!-- Skills-->
-            <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="universitylifelist">
+            <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
 	<h2 class="mb-5">
 	        <span class="text-primary">新冠病毒症狀</span></h2>
@@ -522,56 +522,10 @@
 			</thead>
 		</table>
 	</div>
-	      <div><img class="img-fluid img-profile mx-auto mb-2" src="症狀.png" style="width: 500px;height: 500px;"></div>
+	      <div><img class="img-fluid img-profile mx-auto mb-2" src="症狀.png" style="width: 500px;height: 500px;">
+	      <img class="img-fluid img-profile mx-auto mb-2" src="預防.png" style="width: 500px;height: 500px;"></div>
       </div>
     </section>
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
-            </section>
-        </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
