--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於新冠病毒</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">各地疫情時間軸</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">臺灣防疫措施</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">新冠病毒症狀</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">新冠病毒症狀&預防</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests"></a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards"></a></li>
                 </ul>
@@ -499,7 +499,7 @@
             <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
 	<h2 class="mb-5">
-	        <span class="text-primary">新冠病毒症狀</span></h2>
+	        <span class="text-primary">新冠病毒症狀&預防</span></h2>
 	<div class="subheading mb-5">
 		<table class="table">
 			<thead class="thead-dark">
